# skills_sync

./: Cargo.toml  Makefile  build.rs
man/: skillsync-add-recursive.1  skillsync-add.1  skillsync-clone.1  skillsync-concurrency.1  skillsync-key-import.1  skillsync-key-remove.1  skillsync-key-status.1  skillsync-key.1  skillsync-remove-recursive.1  skillsync-remove.1  skillsync-set-concurrency.1  skillsync-status.1  skillsync-update.1  skillsync.1
src/: app.rs  cli.rs  config.rs  git_ops.rs  lib.rs  main.rs  ssh_key.rs
src/commands/: clone.rs  concurrency.rs  key.rs  mod.rs  repos.rs  status.rs  update.rs
src/git/: mod.rs  ops.rs  scan.rs
