[package]
name = "skills_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "2.1.0"
directories = "6.0.0"
futures = "0.3.30"
indicatif = "0.17.11"
keyring = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.13.0"
tokio = { version = "1.50.0", features = ["fs", "process", "macros", "rt-multi-thread", "sync"] }
toml = "1.0.4"
